# ecomp

./: .gitignore  README  configure.ac
data/: Makefile.am  animation-screen0.src  blur-screen0.src  core-allscreens.src  core-screen0.src  cube-allscreens.src  cube-screen0.src  decoration-allscreens.src  expo-allscreens.src  mblur-screen0.src  move-allscreens.src  ring-screen0.src  rotate-screen0.src  scale-screen0.src  scaleaddon-screen0.src  shift-screen0.src  switcher-allscreens.src  switcher-screen0.src  wall-allscreens.src  wobbly-screen0.src
include/: ecomp.h
plugins/: decoration.c  ini.c  move.c
src/: main.c
